new updates to home and nav bar

--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,6 @@
      padding: 0;
      width: 100%;
      }
-     body {
-     font-family: 'Roboto', sans-serif;
-     font-size: 13px;
-     -webkit-font-smoothing: antialiased;
-     }
-     .ipl-progress-indicator.available {
-     opacity: 0;
-     }
      .ipl-progress-indicator {
      background-color: #f5f5f5;
      width: 100%;
@@ -63,20 +55,20 @@
      }
      .insp-logo-frame-img{
      width: 112px;
-     height: 112px;
+     height: 122px;
      -webkit-align-self: center;
      -moz-align-self: center;
      align-self: center;
      border-radius: 50%;
      }
      .ipl-progress-indicator-head {
-     background-color: #c6dafc;
-     height: 4px;
+     background-color: #cfd7e5;
+     height:  15px;
      overflow: hidden;
      position: relative;
      }
-     .ipl-progress-indicator .first-indicator, .ipl-progress-indicator .second-indicator {
-     background-color: #056D8B;
+     .ipl-progress-indicator .first-indicator, .ipl-progress-indicator .second-indicator{
+     background-color:blue;
      bottom: 0;
      left: 0;
      right: 0;
@@ -99,6 +91,7 @@
      -moz-animation: second-indicator 2000ms linear infinite;
      animation: second-indicator 2000ms linear infinite;
      }
+
      .ipl-progress-indicator .insp-logo {
      animation: App-logo-spin infinite 20s linear;
      border-radius: 50%;
@@ -174,6 +167,8 @@
      }
      ;
      }
+
+
    </style>
     <title>Calvin Yap</title>
   </head>
