added bootsrap + images

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <style type="text/css">
+  <!--  <style type="text/css">
      html, body {
      height: 100%;
      margin: 10;
@@ -169,14 +169,14 @@
      }
 
 
-   </style>
+   </style>  -->
     <title>Calvin Yap</title>
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div class="ipl-progress-indicator" id="ipl-progress-indicator">
+<!--    <div class="ipl-progress-indicator" id="ipl-progress-indicator">
    <div class="ipl-progress-indicator-head">
      <div class="first-indicator"></div>
      <div class="second-indicator"></div>
@@ -189,7 +189,7 @@
            <path d="M520.5 78.1z"/>
        </g>
    </svg>
-   </div>
+ </div> -->
  </div>
     <div id="root"></div>
     <!--
